--- a/mpage/block3.html
+++ b/mpage/block3.html
@@ -31,7 +31,7 @@
                     <li><a href="../add.html">Add</a></li>
             </ul>
     </nav> <br><br>
-<img class="block" src="../img/block3.jpg" alt="Block-3" title="Block-3">
+<img class="block" src="../img/block3.JPG" alt="Block-3" title="Block-3">
 
 </body>
 </html>
