--- a/mpage/sds.html
+++ b/mpage/sds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>School of Dental Science - Sharda University</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <style>   
     .h3{
